--- a/web1.html
+++ b/web1.html
@@ -9,8 +9,7 @@
         
         <div class="container">
             <div id="logo">
-                <div class="csalogo"><img src="csalogo.png"></div>
-                <!--<div class="collegelogo"><img src="collegelogo.png"></div>-->
+                <div class="csalogo"><img src="college.png"></div>
             </div>
             <div class="welcome">
                 <h2>Welcome to<br>Colegio San Agustin Biñan</h2>
@@ -19,6 +18,7 @@
                 <button type="button" class="registerbtn">Register</button>
             </div>
             <div class="form-box login">
+                <div class="collegelogo"><img src="csalogo.png"></div>
                 <form action="">
                     <h1>Login</h1>
                     <div class="input-box">
@@ -35,12 +35,12 @@
                         <a href="#">Forgot password?</a>
                     </div>
                     <button type="submit" class="btn">Login</button>
-                    <p>or login with social platforms</p>
+                    <!--<p>or login with social platforms</p>
                     <div class="social-icons">
                         <a href="#"><i class='bx bxl-google' ></i></a>
                         <a href="#"><i class='bx bxl-facebook' ></i></a>
                         <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                    </div>
+                    </div>-->
                 </form>
             </div>
         </div>
